--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,15 @@
 
 /* Your CSS Code here. */
+table {
+            width: 50%;
+            margin: 20px auto;
+            border-collapse: collapse;
+        }
+        th, td {
+            border: 1px solid black;
+            padding: 10px;
+            text-align: center;
+        }
+        th {
+            background-color: #f2f2f2;
+        }
